# rootin4

./: .gitignore  .gitleaks.toml  LICENSE  README.md  package.json
.github/workflows/: secret-scan.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/rootin4_agent/: agent.py  instrumentation.py  main.py  settings.py
backend/src/rootin4_agent/exports/: datacamp.py
backend/src/rootin4_agent/tools/: health.py
backend/src/rootin4_agent/tournament/: aggregate.py  elo.py  group_stage.py  knockout.py  poisson.py  simulate.py  state.py
backend/tests/: test_health.py
db/: schema.sql  seed.sql
docs/: datacamp-plan.md  design-brief-minimal.md  design-brief-open.md  design-brief.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/match/[id]/: page.tsx
src/app/schedule/: page.tsx
src/components/: agent-ticker.tsx  atmospheric-field.tsx  header-ticket-chip.tsx  home-ticket-hero.tsx  live-simulation-status.tsx  match-ticket-actions.tsx  probability-bar.tsx  schedule-explorer.tsx  site-footer.tsx  site-header.tsx  verdict-card.tsx
src/lib/: stub-data.ts  use-live-simulation.ts  use-my-ticket.ts  wc2026-data.ts
